src/components/Nav/Nav.module.css
.NavBar {
    background-color:#f5f5f5;
    text-align:center;
    overflow:hidden;
    padding:5px 10px;
    position: fixed;
    width: 100vw;
  }


.NavItem{
    background-color: #f5f5f5;
    padding: 12px;
    text-decoration: none;
    font-size: 18px; 
    line-height: 25px;
    border-radius: 1px;
    margin: 0;
    min-width:100px;
    text-align:center;
    display:inline-block
}

.NavItem:hover{
    background-color: #262626;
}

.NavLink{
    font-weight: bold;
    color:#262626;
}

.NavLink:hover{
    color: #f5f5f5;
}

